# nextvod-tdt

./: Dockerfile  README.md
tdt/cvs/apps/enigma1-hd/data/resources/: Makefile.am  Makefile.in  rc_vip2.xml  rcufs91014w.xml
tdt/cvs/apps/enigma2/: Makefile.am  RecordTimer.py  acinclude.m4  autogen.sh  configure.ac  mytest.py
tdt/cvs/apps/enigma2/data/: skin.xml  skin_default.xml
tdt/cvs/apps/enigma2/lib/base/: filepush.cpp  filepush.h  ioprio.cpp  object.h
tdt/cvs/apps/enigma2/lib/driver/: Makefile.am  vfd.cpp
tdt/cvs/apps/enigma2/lib/dvb/: decoder.cpp  demux.cpp  dvb.cpp  dvb.h  dvbtime.cpp  eit.cpp  epgcache.cpp  epgcache.h  frontend.cpp  subtitle.cpp  subtitle.h
tdt/cvs/apps/enigma2/lib/dvb_ci/: dvbci.cpp  dvbci.h  dvbci_appmgr.cpp  dvbci_camgr.cpp  dvbci_mmi.cpp  dvbci_resmgr.cpp
tdt/cvs/apps/enigma2/lib/gdi/: fb.cpp  fb.h  gfbdc.cpp  gpixmap.cpp  gpixmap.h  lcd.cpp  picload.cpp  picload.h
tdt/cvs/apps/enigma2/lib/gui/: evideo.cpp
tdt/cvs/apps/enigma2/lib/python/: Makefile.am
tdt/cvs/apps/enigma2/lib/service/: Makefile.am  servicedvb.cpp  servicedvbrecord.cpp  servicemp3.cpp  servicemp3.h
tdt/cvs/apps/enigma2/main/: Makefile.am  bsod.cpp  enigma.cpp
tdt/cvs/apps/enigma2/po/: Makefile.am  et.po
tdt/cvs/apps/misc/libs/: Makefile.am  configure.ac
tdt/cvs/apps/misc/libs/libnet/: libnet.c
tdt/cvs/apps/misc/libs/libxmltree/: xmlparse.cpp  xmltree.cpp
tdt/cvs/apps/misc/tools/: Makefile.am  configure.ac
tdt/cvs/apps/misc/tools/aio-grab/: Makefile.am  main.c
tdt/cvs/apps/misc/tools/devinit/: devinit.c
tdt/cvs/apps/misc/tools/eplayer4/: Makefile.am  (+1 more)
tdt/cvs/cdk/: .gitignore  Makefile.am  acinclude.m4  allinc_debian.sh  autogen.sh  bpanther_test.txt  configure.ac  env.sh  fedora12.sh  make-vdr.sh  make.sh  make_gui.sh  opensuse1102.sh  remake.sh  rules-archive  rules-archive.pl  rules-install  rules-install-flash  rules-make  rules-make.latest  rules-uninstall  rules.pl  rules.pl.debian  setuptdt.sh  tdt_readme.txt  touch.sh  ubuntu910.sh
tdt/cvs/cdk/Patches/: .directory  Python-2.6.2-cross_ctype.patch  Python-2.6.2-libffi_pic.patch  Python-2.6.2-sitecustomize.patch  aio-grab-47983a78821c0fdbef3aab36113d5c6fc34bb11b-ADD_ST_SUPPORT.patch  aio-grab.patch  alsa-lib-1.0.21a-soft_float.patch  autoconf-remove-usr-local-lib-from-m4.patch  autofs-3.1.7-labelfix.patch  autofs-3.1.7-no_man.patch  autofs-3.1.7-stm.patch  autofs-3.1.7-timeout.patch  autofs-4.0.0-open_max.patch  autofs-4.1.4-Makefile.rules-cross.patch  autofs-4.1.4-ext4.patch  autofs-4.1.4.patch  autofs.diff  autofs4.diff  automake-py-compile-compile-only-optimized-byte-code.patch  binutils-2.15.91.0.2-srcdir.diff_  bpa2_procfs_stm24_0205.patch  busybox-1.11.2.config  busybox-1.18.4.config  busybox-1.18.5.config  busybox-initfiles.patch  busybox.config  busybox.config_nandwrite  busybox.diff  bzip2.diff  cairo-1.8.10.diff  cross-binutils.diff  cuberevo_patches_stlinux23.patch  directfb-1.4.11+STM2010.12.15-4.enigma2remote.diff  directfb-1.4.11+STM2010.12.15-4.no-vt.diff  directfb-libpng.diff  directfb-stm.diff  e2-fb.diff  e2-progtest-m4.patch  e2-rc.diff  e2_api5.patch  (+729 more)
tdt/cvs/cdk/Patches/busybox-1.19.2/: busybox-1.19.2-syslogd.patch  busybox-1.19.2.config
tdt/cvs/cdk/Patches/busybox-1.19.3/: busybox-1.19.3.config
tdt/cvs/cdk/Patches/busybox-1.19.4/: busybox-1.19.4.config
tdt/cvs/cdk/Patches/busybox-1.20.0/: busybox-1.20.0.config
tdt/cvs/cdk/Patches/busybox-1.20.1/: busybox-1.20.1.config
tdt/cvs/cdk/Patches/busybox-1.20.2/: busybox-1.20.2.config
tdt/cvs/cdk/ReleaseNotes/: ReleaseNotesTF7700.txt
tdt/cvs/cdk/integrated_firmware/: fdma2_7109-v4.5.elf  fdma_STx7111_1.elf  fdvo0.fw
tdt/cvs/cdk/make/: archive-specs.mk  bare-os.mk  bootstrap.mk  buildenv.mk  busybox.mk  ccache.mk  cleantargets.mk  contrib-apps-specs.mk  contrib-apps.mk  contrib-libs.mk  development.mk  disttargets.mk  diverse-tools.mk  enigma.mk  enigma1-hd.mk  enigma2-nightly.mk  enigma2-nightly_option_0.mk  enigma2-pli-nightly.mk  enigma2-plugins.mk  enigma2.mk  flash-expand-targets.mk  flashable-dirs.mk  flashable-dirs.mk_orig  flashroot-fs.mk  flashroot.mk  flashybrid.mk  fullimages.mk  helper-images.mk  hostapps.mk  ipkg.mk  libtuxbox.mk  linux-kernel.mk  menu.mk  misc-specs.mk  misc_libs.mk  misc_tools.mk  net-apps.mk  neutrino-plugins.mk  neutrino.mk  neutrino_hd2.mk  (+30 more)
tdt/cvs/cdk/root/: CAUTION.txt
tdt/cvs/cdk/root/etc/: at7000.fw_env.config  atevio7500.fw_env.config  auto.ufs910  boxtype  fstab  fstab_flash  fw_env.config  fw_env.config_ufs913  inetd.conf  inittab  inittabBB  ipkg.conf  lircd_adb_box.conf  lircd_hs5101.conf  lircd_ipbox.conf  lircd_rc08.conf  lircd_spark.conf  lircd_spark2.conf  lircd_spark7162.conf  modules  modules.available  motd  profile  vsftpd.conf
tdt/cvs/cdk/root/firmware/: README  fdma_STx7109_0.elf  fdma_STx7111_0.elf
tdt/cvs/cdk/root/release/: auto.usb  autofs  bootclean.sh  encrypt_spark7162_stm24_0207.ko  encrypt_spark7162_stm24_0209.ko  encrypt_spark7162_stm24_0210.ko  encrypt_spark7162_stm24_0211.ko  encrypt_spark_stm23_0119.ko  encrypt_spark_stm23_0123.ko  encrypt_spark_stm23_0123_noptk.ko  encrypt_spark_stm24_0205.ko  encrypt_spark_stm24_0207.ko  encrypt_spark_stm24_0210.ko  encrypt_spark_stm24_0211.ko  fp.ko_stm22_041_cuberevo  fp.ko_stm22_041_cuberevo_2000hd  fp.ko_stm22_041_cuberevo_250hd  fp.ko_stm22_041_cuberevo_9500hd  fp.ko_stm22_041_cuberevo_mini  fp.ko_stm22_041_cuberevo_mini2  fp.ko_stm23_0123_cuberevo  fp.ko_stm23_0123_cuberevo_2000hd  fp.ko_stm23_0123_cuberevo_250hd  fp.ko_stm23_0123_cuberevo_9500hd  fp.ko_stm23_0123_cuberevo_mini  fp.ko_stm23_0123_cuberevo_mini2  halt_cuberevo  halt_spark  halt_spark7162  halt_tf7700  halt_ufs  hostname  keymap_xbmc.xml  lircd.conf  makedev  mme_check  mountall  mountvirtfs  network  networking  (+131 more)
tdt/cvs/cdk/root/sbin/: MAKEDEV  MAKEDEV_adb_box  MAKEDEV_dual_tuner  MAKEDEV_flash  MAKEDEV_no_CI  MAKEDEV_twin_no_ci  mkyaffs2  unspare2
tdt/cvs/cdk/tfinstaller/: .gitignore  Enigma_Installer.ini  Makefile  README  ar.c  ar.h  busybox  decode.c  deploy.sh  encode.c  huf.c  initramfs_list  inittab  io.c  maketbl.c  rcS
(+1995 files in other folders)
